conecction with api

--- a/src/components/style.css
+++ b/src/components/style.css
@@ -29,6 +29,12 @@ ul.no-bullets li
     border-top: 1px solid rgba(0, 0, 0, 0.1);
     border-bottom: 1px solid rgba(255, 255, 255, 0.3);
 */
+
+.loading{
+    display: block;
+    text-align: center;
+}
+
 .tittle-page{
     display: block;
     text-align: center;
